--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <!-- Write your name below -->
-    <h2>Victor Pang</h2>
+    <h2>Hum this is interesting</h2>
     <nav class="social-nav">
       <ul>
         <li>
