--- a/text.html
+++ b/text.html
@@ -1,3 +1,11 @@
-<h1>Hey, I'm a big heading</h1>
-<p>Hey, I'm a paragraph element.</p>
-<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link</a>
+<!DOCTYPE html>
+<head>
+  <title>Test Page</title>
+</head>
+<body
+  <h1>Hey, I'm a big heading</h1>
+  <p>Hey, I'm a <b>paragraph</b> element.</p>
+  <a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link</a>
+  <p><img src="https://i.imgur.com/JOg9W56.jpg"></p>
+</body>
+</html>
