fixed body code

--- a/ph-beta.html
+++ b/ph-beta.html
@@ -2,11 +2,11 @@
 <head>
   <title>Proto Haus</title>
 </head>
-<body
+<body>
   <h1>Proto Haus is a personal blog where thoughts comes to life</h1>
   <p>Hello. I'm Bo, I work in client management at <a href="https://graftbrandlab.com/de/" target="_blank" title="Graft Brandlab Homepage">Graft Brandlab</a>, a Berlin based branding agency, since 2019.
-  <p>I build this site to <a href="/write">write</a> and keep a record for my explorations on random topics.<br>
-  I'm currently interested in practicing my writing skills, as well as diving into Computer Science topics - in order to <a href="/make">make</a> simple tools to help myself to deal with information overload.</p>
+  <p>I build this site to <a href="/write">write</a> and keep a record for my explorations on random topics.</p>
+  <p>I'm currently interested in practicing my writing skills, as well as diving into Computer Science topics - in order to <a href="/make">make</a> simple tools to help myself to deal with information overload.</p>
   <p>Alongside, I'm having fun riding the wave of <a href="https://prelon.org/the-book-of-prelon/" target="_blank" title="Book of Prelon">prelon</a>, a social experiment starts off Clubhouse.</p>
   <p><img src="https://i.imgur.com/JOg9W56.jpg" alt="by JonnyCarson"><br>
     Image Credit <a href="https://imgur.com/JOg9W56?nc=1" target="_blank" title=JohnnyCarson>@JohnnyCarson</a> (or whomsoever)</P>
