Wrote CSS for website, change some html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Wreck-it Ralph</title>
   <link rel="icon" href="https://media4.s-nbcnews.com/j/newscms/2018_47/2654826/181121-wreck-it-ralph-breaks-the-internet-3-ew-228p_598c8adb905343d4246e739d8d1c6dd2.fit-1240w.jpg">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/hero.css">
 </head>
 <body>
   <!-- header element -->
@@ -16,7 +19,7 @@
       <h2>About Ralph</h2>
       <p>Raplh is awesome! He's an 8-bit videgame bad guy who travels the length of the arcade to prove that h's a good guy.</p>
       <img src="https://media4.s-nbcnews.com/j/newscms/2018_47/2654826/181121-wreck-it-ralph-breaks-the-internet-3-ew-228p_598c8adb905343d4246e739d8d1c6dd2.fit-1240w.jpg">
-      <p>Ralph and his friends</p>
+      <p class="caption">Ralph and his friends</p>
 
     <!-- Characteristics -->
       <h2>Ralph's Characteristics</h2>
