--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <!-- header element -->
   <header>
-      <img src="https://lumiere-a.akamaihd.net/v1/images/ralph-headretina_f6ef0c9b.jpeg?region=0,0,450,450">
+      <img src="https://i.imgur.com/JOg9W56.jpg">
+      <!-- https://lumiere-a.akamaihd.net/v1/images/ralph-headretina_f6ef0c9b.jpeg?region=0,0,450,450 -->
       <h1>Wreck-it Ralph</h1>
   </header>
 
