updated proto.haus to index

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
           Luigi</a></li>
         <li><a target="_blank" href="https://disney.fandom.com/de/wiki/Vanellope_von_Schweetz">
           Vanellope von Schweetz A.K.A Glitch</a></li>
+        <li><a target="_blank" href="/ph-beta.html">
+          Proto.Haus</a></li>
       </ul>
   </main>
 
