--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           Luigi</a></li>
         <li><a target="_blank" href="https://disney.fandom.com/de/wiki/Vanellope_von_Schweetz">
           Vanellope von Schweetz A.K.A Glitch</a></li>
-        <li><a target="_blank" href="/ph-beta.html">
+        <li><a target="_blank" href="https://fcmarz.github.io/SkillshareSite/ph-beta.html">
           Proto.Haus</a></li>
       </ul>
   </main>
