--- a/links.html
+++ b/links.html
@@ -3,10 +3,17 @@
   <title>Links</title>
 </head>
 <body>
-  <h1>Proto Haus is a personal blog where thoughts comes to life</h1>
+  <center>
+  <h1>Executions</h1>
   <p><a href="https://docs.google.com/spreadsheets/d/1MmMTdan7v9onQcg0Vvw5BE9lf8uLL02wAAA7VFbpbLs/edit?usp=sharing" target="_blank">Fitness Table</a></p>
   <p><a href="https://docs.google.com/spreadsheets/d/1OxCDtqXikCf64n7mpOdFKpKeXVSBjhOpSawuEAdHOPA/edit?usp=sharing" target="_blank">Schedule of the week</a></p>
+  <p></p>  
+  <h1>Course Links</h1>  
   <p><a href="https://learning.edx.org/course/course-v1:MITx+6.00.1x+1T2021/home" target="_blank">MIT 6.001x - Computer Science with Python</a></p>
-  <p><a href="  https://dappuniversity.teachable.com/courses/enrolled/549171" target="_blank">Dapp University</a></p>    
+  <p><a href="https://dappuniversity.teachable.com/courses/enrolled/549171" target="_blank">Dapp University</a></p>
+  <p></p>  
+  <h1>Others</h1>  
+  <p><a href="https://docs.google.com/document/d/17xxwYyvZS-hhYZiWwW8vFw50tO09CAZM5iPP72XY_98/edit?usp=sharing" target="_blank">λ</a></p>
+  </center>
 </body>
 </html>
