--- a/links.html
+++ b/links.html
@@ -1,19 +1,48 @@
 <!DOCTYPE html>
 <head>
   <title>Links</title>
+  <style>
+    li {
+      display: block;
+      margin-bottom: 1em;
+      padding: 0.8em;
+      border: 1px solid #f7f7f7;
+      border-radius: 1em;
+      background-color: #f7f7f7;
+      color: #838383;
+      text-decoration: none;
+    }
+    h1 {
+      font-size: 2.5em;
+      font-family: system-ui;
+      display: inline;
+      font-variant-caps: titling-caps
+    }
+    a {
+      font-size: 1.5em;
+      color: inherit;
+      text-decoration: none;
+      font-family: system-ui;
+      font-weight: 600;
+    }
+  </style>
 </head>
 <body>
-  <center>
   <h1>Executions</h1>
-  <p><a href="https://docs.google.com/spreadsheets/d/1MmMTdan7v9onQcg0Vvw5BE9lf8uLL02wAAA7VFbpbLs/edit?usp=sharing" target="_blank">Fitness Table</a></p>
-  <p><a href="https://docs.google.com/spreadsheets/d/1OxCDtqXikCf64n7mpOdFKpKeXVSBjhOpSawuEAdHOPA/edit?usp=sharing" target="_blank">Schedule of the week</a></p>
-  <p></p>  
-  <h1>Course Links</h1>  
-  <p><a href="https://learning.edx.org/course/course-v1:MITx+6.00.1x+1T2021/home" target="_blank">MIT 6.001x - Computer Science with Python</a></p>
-  <p><a href="https://dappuniversity.teachable.com/courses/enrolled/549171" target="_blank">Dapp University</a></p>
-  <p></p>  
-  <h1>Others</h1>  
-  <p><a href="https://docs.google.com/document/d/17xxwYyvZS-hhYZiWwW8vFw50tO09CAZM5iPP72XY_98/edit?usp=sharing" target="_blank">λ</a></p>
-  </center>
+  <ul>
+    <li><a href="https://docs.google.com/spreadsheets/d/1MmMTdan7v9onQcg0Vvw5BE9lf8uLL02wAAA7VFbpbLs/edit?usp=sharing" target="_blank">🏋🏻‍♂️Fitness Table</a></li>
+    <li><a href="https://docs.google.com/spreadsheets/d/1OxCDtqXikCf64n7mpOdFKpKeXVSBjhOpSawuEAdHOPA/edit?usp=sharing" target="_blank">🗓Schedule of the week</a></li>
+    </ul>
+  <p></p>
+  <h1>Course Links</h1>
+  <ul>
+    <li><a href="https://learning.edx.org/course/course-v1:MITx+6.00.1x+1T2021/home" target="_blank">👨🏻‍💻MIT 6.001x - Computer Science with Python</a></li>
+    <li><a href="https://dappuniversity.teachable.com/courses/enrolled/549171" target="_blank">🚀Dapp University</a></li>
+  </ul>
+  <p></p>
+  <h1>Others</h1>
+  <ul>
+  <li><a href="https://docs.google.com/document/d/17xxwYyvZS-hhYZiWwW8vFw50tO09CAZM5iPP72XY_98/edit?usp=sharing" target="_blank">𝛌</a></li>
+  </ul>
 </body>
 </html>
