adjusted font size for mobile

--- a/links.html
+++ b/links.html
@@ -13,13 +13,13 @@
       text-decoration: none;
     }
     h1 {
-      font-size: 2.5em;
+      font-size: 8em;
       font-family: system-ui;
       display: inline;
       font-variant-caps: titling-caps
     }
     a {
-      font-size: 1.5em;
+      font-size: 5em;
       color: inherit;
       text-decoration: none;
       font-family: system-ui;
@@ -28,6 +28,7 @@
   </style>
 </head>
 <body>
+  <center>
   <h1>Executions</h1>
   <ul>
     <li><a href="https://docs.google.com/spreadsheets/d/1MmMTdan7v9onQcg0Vvw5BE9lf8uLL02wAAA7VFbpbLs/edit?usp=sharing" target="_blank">🏋🏻‍♂️Fitness Table</a></li>
@@ -44,5 +45,6 @@
   <ul>
   <li><a href="https://docs.google.com/document/d/17xxwYyvZS-hhYZiWwW8vFw50tO09CAZM5iPP72XY_98/edit?usp=sharing" target="_blank">𝛌</a></li>
   </ul>
+  </center>
 </body>
 </html>
