--- a/links.html
+++ b/links.html
@@ -44,6 +44,7 @@
   <h1>Others</h1>
   <ul>
   <li><a href="https://docs.google.com/document/d/17xxwYyvZS-hhYZiWwW8vFw50tO09CAZM5iPP72XY_98/edit?usp=sharing" target="_blank">𝛌</a></li>
+  <li><a href="https://docs.google.com/document/d/1Sbcg-LoXUj6YCO40xD2KUgx9Z4TSreYGuM19vAHyyFY/edit?usp=sharing" target="_blank">⌿</a></li>
   </ul>
   </center>
 </body>
